# News-research-tool-with-LangChain

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
Data/: used_articles.txt  vector_index.pkl
Notebooks/: text_loading_and_splitting.ipynb  text_retrieval.ipynb
