[tool.poetry]
name = "news-research-tool-with-langchain"
version = "0.1.0"
description = ""
authors = ["Arman Babayan <arman.babayan.92@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.325"
unstructured = "^0.10.27"
libmagic = "^1.0"
jupyter = "^1.0.0"
python-magic = "0.4.15"
python-dotenv = "^1.0.0"
openai = "^0.28.1"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
streamlit = "^1.28.0"
watchdog = "^3.0.0"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
